# aesop

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CODEOWNERS  README.md  biz_glossary.csv  generate_models.sh  index.html  mkdocs.yml  pyproject.toml  sample_data.csv  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  ci.yml  release.sha1
.github/actions/: setup_environment.yml
.github/actions/setup_environment/: action.yml
.github/scripts/: check_versions.py
.github/workflows/: build_docs.yml  ci.yml  coverage.yml  create_documentation.yml  create_release.yml  create_tag_and_draft_release.yml  publish.yml  publish_new_version.yml  publish_to_pypi.yml  update_api_schema.yml
aesop/: .pre-commit-config.yml  app.py  config.py  console.py
aesop/commands/: __init__.py  documents.py
aesop/commands/aspects/: __init__.py  custom_metadata.py
aesop/commands/aspects/user_defined_resources/tags/: models.py  node.py  tags.py
aesop/commands/common/: all_platforms.py  arguments.py  exception_handler.py  input_model.py  options.py  paginator.py
aesop/commands/documents/: biz_glossary.py  documents.py  glossaries.py
aesop/commands/domains/: domains.py  saved_queries.py
aesop/commands/entities/datasets/: datasets.py
aesop/commands/entities/datasets/commands/: __init__.py
aesop/commands/entities/datasets/commands/ai_descriptions/: ai_descriptions.py
aesop/commands/info/: info.py
aesop/commands/settings/: settings.py
aesop/commands/settings/custom_metadata/: custom_metadata.py
aesop/commands/settings/non_prod/: non_prod.py
aesop/commands/settings/soft_deletion/: soft_deletion.py
aesop/commands/settings/webhooks/: webhooks.py
aesop/commands/tags/: models.py  tags.py
aesop/commands/tags/commands/: add.py  assign.py  get.py  list.py  remove.py  unassign.py
aesop/commands/upload/: __init__.py  upload.py
aesop/commands/webhooks/: webhooks.py
aesop/graphql/: ariadne-codegen.toml  codegen.md  codegen.sh
aesop/graphql/queries/mutations/: createGovernedTags.graphql  updateDatasetCustomMetadata.graphql
aesop/graphql/queries/mutations/documents/: createDataDocument.graphql
aesop/graphql/queries/queries/: getDatasetCustomMetadata.graphql
aesop/graphql/queries/queries/descriptions/: autoDescribe.gql
aesop/graphql/queries/queries/domains/: getDomain.graphql
docs/: index.md
samples/: kg_descriptions.csv
search/: search_index.json
src/aesop/: api_key_utils.py  cli.py  config.py  data_asset_loaders.py  data_asset_uploaders.py  input_validation.py
src/aesop/graphql_models_generated/: custom_fields.py  custom_queries.py  enums.py
src/metaphor_cli/: README.md  cli.py  config.py  data_asset_loaders.py  data_asset_uploaders.py  input_validation.py
tests/: base_test_suite.py  conftest.py  test_cli.py  test_main_callback.py  utils.py
tests/commands/: test_domains.py  test_info.py
tests/commands/aspects/: test_custom_metadata.py
tests/commands/aspects/user_defined_resources/: test_tags.py
tests/commands/documents/: test_utils.py
tests/commands/settings/: test_non_prod.py
